# alfan-kinematics

./: .gitignore  LICENSE  README.md
include/: kinematics.hpp
src/: kinematics  kinematics.cpp  main.cpp  new  new.cpp
src/alfan_kinematics/: CMakeLists.txt  package.xml
src/alfan_kinematics/include/alfan_kinematics/: alfan_kinematics.hpp  foot_step_planner.hpp  gait_controller.hpp  gait_generator.hpp  joint_state_converter.hpp
src/alfan_kinematics/src/: alfan_kinematics.cpp  foot_step_planner.cpp  gait_controller.cpp  gait_generator.cpp  joint_state_converter.cpp
src/alfan_msgs/: CMakeLists.txt  package.xml
src/alfan_msgs/msg/: JointCommand.msg
src/alfan_walking/: CMakeLists.txt  package.xml
src/alfan_walking/src/: simple_pub.cpp
src/alfan_webots_sim/: README.md  package.xml  setup.cfg  setup.py
src/alfan_webots_sim/alfan_webots_sim/: alfan_webots_driver.py  sim_launcher.py  single_robot.py
src/alfan_webots_sim/launch/: simulation.launch  single_robot.launch
src/alfan_webots_sim/protos/: alfan_2025.proto  alfan_2025_fixed.proto  alfan_lower_body_only.proto
src/alfan_webots_sim/protos/alfan_2025/assets/: body.part  body.scad  body.stl  config.json  hip_connector.part  hip_connector.stl  l_ankle_mx28_block.part  l_ankle_mx28_block.scad  l_ankle_mx28_block.stl  l_arm_pitch.part  l_arm_pitch.scad  l_arm_pitch.stl  l_elbow_block.part  l_elbow_block.scad  l_elbow_block.stl  l_foot.part  l_foot.scad  l_hip_mx28_block.part  l_hip_mx28_block.scad  l_hip_mx28_block.stl  l_hip_to_knee.part  l_palm.part  l_palm.scad  l_palm.stl  l_shoulder_connector.part  l_shoulder_connector.scad  l_shoulder_connector.stl  l_wrist_pitch.part  l_wrist_pitch.scad  l_wrist_pitch.stl  l_wrist_roll.part  l_wrist_roll.scad  l_wrist_roll.stl  r_ankle_mx28_block.part  r_ankle_mx28_block.scad  r_arm_pitch.part  r_arm_pitch.scad  r_arm_pitch.stl  r_elbow_block.part  r_elbow_block.scad  (+21 more)
src/alfan_webots_sim/protos/alfan_2025_fixed_stl/: body.stl  head_to_face.stl  hip_connector.stl  l_ankle_mx28_block.stl  l_arm_pitch.stl  l_foot.stl  l_hip_mx28_block.stl  l_palm.stl  l_wrist_pitch.stl  l_wrist_roll.stl  neck.stl  r_ankle_mx28_block.stl  r_arm_pitch.stl  r_elbow_block.stl  r_hip_mx28_block.stl  r_palm.stl  r_shoulder_connector.stl  r_wrist_pitch.stl  r_wrist_roll.stl  tibia.stl
src/alfan_webots_sim/protos/alfan_lower_body_only/assets/: body.part  body.stl  config.json  hip_connector.part  hip_connector.scad  l_ankle_mx28_block.part  l_foot.part  l_foot.scad  l_hip_mx28_block.part  l_hip_to_knee.part  l_hip_to_knee.scad  l_hip_to_knee.stl  r_ankle_mx28_block.part  r_ankle_mx28_block.stl  r_foot.part  r_foot.scad  r_hip_mx28_block.part  r_hip_to_knee.part  r_hip_to_knee.stl  tibia.part  tibia.scad
src/alfan_webots_sim/worlds/: .alfan_arena.wbproj  alfan_arena.wbt
src/dynamixel-workbench-2.2.3/dynamixel_workbench_toolbox/examples/src/: a_Model_Scan.cpp  b_Ping.cpp  c_ID_Change.cpp  d_BPS_Change.cpp  e_Mode_Change.cpp  f_Reboot.cpp  g_Reset.cpp  h_Position.cpp  i_Velocity.cpp  j_Current_Based_Position.cpp  k_Read_Write.cpp  l_Sync_Write.cpp  m_Sync_Read_Write.cpp  n_Bulk_Read_Write.cpp  o_Find_Dynamixel.cpp  p_Monitor.cpp
src/dynamixel-workbench-2.2.3/dynamixel_workbench_toolbox/include/dynamixel_workbench_toolbox/: dynamixel_driver.h
src/dynamixel-workbench-2.2.3/dynamixel_workbench_toolbox/src/dynamixel_workbench_toolbox/: dynamixel_driver.cpp
src/kinematics/: CMakeLists.txt  package.xml
src/kinematics/include/kinematics/: kinematics.hpp
src/kinematics/src/: kinematics.cpp
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/src/: Sync_Read_Write.cpp
